kubenetes-nginx/kube-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 0%
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.17-alpine
          ports:
            - containerPort: 80

          readinessProbe:  #  mark the container/pod as "ready/unready" in the service
            httpGet:
              path: /
              port: 80
            successThreshold: 3
            failureThreshold: 1
            timeoutSeconds: 3
            initialDelaySeconds: 30
            periodSeconds: 10
